--- a/tiles/test.html
+++ b/tiles/test.html
@@ -1,5 +1,35 @@
 <html>
 
-	<div align="center" valign="middle">Hallo Welt!</div>
+<body onclick="changeImage()" style="background: url(http://thecatapi.com/api/images/get?format=src&type=gif&category=caturday) fixed; 
+	background-repeat:  no-repeat;
+	background-size: 100% 100%;">
 
+<script type="text/javascript">
+    function changeImage() {
+	var body = document.getElementsByTagName('body')[0];
+	var nextUrl = "http://thecatapi.com/api/images/get?format=src&" + new Date().getTime();
+	body.style.backgroundImage = 'url(' + nextUrl + ')';
+    }
+</script>
+
+<!--
+<div width="100%" height="100%" onclick="changeImage()">
+
+</div>
+
+-->
+
+
+<table border="1" height="16px" style="position: absolute; top: 100%px; right: 0px; left: 0px; bottom: 0px;">
+
+<tr>
+	<td><img src="https://cdn1.iconfinder.com/data/icons/material-audio-video/22/loop-512.png" onclick="changeImage()" width="16px" height="16px"></img></td>
+	<td>2.</td>
+	<td><img src="http://thecatapi.com/ico/favicon.ico" width="16px" height="16px" title="go to"></img></td
+</tr>	
+
+</table>
+
+
+</body>
 </html>
