--- a/tiles/test.html
+++ b/tiles/test.html
@@ -2,7 +2,8 @@
 
 <body onclick="changeImage()" style="background: url(http://thecatapi.com/api/images/get?format=src&type=gif&category=caturday) fixed; 
 	background-repeat:  no-repeat;
-	background-size: 100% 100%;">
+	background-size: 100% 100%;
+	z-index: 1;">
 
 <script type="text/javascript">
     function changeImage() {
@@ -12,24 +13,26 @@
     }
 </script>
 
-<!--
-<div width="100%" height="100%" onclick="changeImage()">
 
-</div>
-
--->
+<div width="100%" height="100%" onclick="changeImage()" align="center" valign="middle" style="z-index: 0;">
 
 
-<table border="1" height="16px" style="position: absolute; top: 100%px; right: 0px; left: 0px; bottom: 0px;">
-
+<table border="0" height="16px" style="
+	position: absolute; 
+	top: 100%px; right: 
+	0px; left: 100%px; 
+	bottom: 0px; 
+	background-color: #ffffff; 
+	border-top-left-radius: 11px;">
 <tr>
-	<td><img src="https://cdn1.iconfinder.com/data/icons/material-audio-video/22/loop-512.png" onclick="changeImage()" width="16px" height="16px"></img></td>
-	<td>2.</td>
-	<td><img src="http://thecatapi.com/ico/favicon.ico" width="16px" height="16px" title="go to"></img></td
+	<td><img src="https://cdn4.iconfinder.com/data/icons/pictype-free-vector-icons/16/sync-24.png" onclick="changeImage()" title="Reload, for a new cute citten!" "width="24"  height="24" style="cursor: pointer;"></img></td>
+	<td><a href="https://thecatapi.com/" target="_blank"><img src="http://thecatapi.com/ico/favicon.ico" width="24" height="24" title="Go to TheCatAPI.com!"></img></td
 </tr>	
 
 </table>
 
+
+</div>
 
 </body>
 </html>
