--- a/tiles/catapi2/catcontent.html
+++ b/tiles/catapi2/catcontent.html
@@ -1,18 +1,15 @@
 <html>
 
+<head>
+
+<script type="text/javascript" src="/droptiles/tiles/catapi2/catapi2.js"></script>
+
+</head>
+
 <body onclick="changeImage()" style="background: url(http://thecatapi.com/api/images/get?format=src&type=gif&category=caturday) fixed; 
 	background-repeat:  no-repeat;
 	background-size: 100% 100%;
 	z-index: 1;">
-
-<script type="text/javascript">
-    function changeImage() {
-	var body = document.getElementsByTagName('body')[0];
-	var nextUrl = "http://thecatapi.com/api/images/get?format=src&" + new Date().getTime();
-	body.style.backgroundImage = 'url(' + nextUrl + ')';
-    }
-</script>
-
 
 <div width="100%" height="100%" onclick="changeImage()" align="center" valign="middle" style="z-index: 0;">
 
@@ -25,7 +22,7 @@
 	background-color: #ffffff; 
 	border-top-left-radius: 11px;">
 <tr>
-	<td><img src="https://cdn4.iconfinder.com/data/icons/pictype-free-vector-icons/16/sync-24.png" onclick="changeImage()" title="Reload, for a new cute citten!" "width="24"  height="24" style="cursor: pointer;"></img></td>
+	<td><img src="https://cdn4.iconfinder.com/data/icons/pictype-free-vector-icons/16/sync-24.png" onclick="changeCatImage()" title="Reload, for a new cute citten!" "width="24"  height="24" style="cursor: pointer;"></img></td>
 	<td><a href="https://thecatapi.com/" target="_blank"><img src="http://thecatapi.com/ico/favicon.ico" width="24" height="24" title="Go to TheCatAPI.com!"></img></td
 </tr>	
 
