change thecatapi.com string for better (smaller) response images

--- a/tiles/catapi2/catcontent.html
+++ b/tiles/catapi2/catcontent.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body onclick="changeImage()" style="background: url(http://thecatapi.com/api/images/get?format=src&type=gif&category=caturday) fixed; 
+<body onclick="changeImage()" style="background: url(http://thecatapi.com/api/images/get?format=src&type=gif&category=caturday&size=small) fixed; 
 	background-repeat:  no-repeat;
 	background-size: 100% 100%;
 	z-index: 1;">
