rename reload image for size decleration

--- a/tiles/catapi2/catcontent.html
+++ b/tiles/catapi2/catcontent.html
@@ -22,7 +22,7 @@
 	background-color: #ffffff; 
 	border-top-left-radius: 11px;">
 <tr>
-	<td><img src="/droptiles/img/reload.png" onclick="changeCatImage()" title="Reload, for a new cute citten!" "width="24"  height="24" style="cursor: pointer;"></img></td>
+	<td><img src="/droptiles/img/reload_24px.png" onclick="changeCatImage()" title="Reload, for a new cute citten!" "width="24"  height="24" style="cursor: pointer;"></img></td>
 	<td><a href="https://thecatapi.com/" target="_blank"><img src="http://thecatapi.com/ico/favicon.ico" width="24" height="24" title="Go to TheCatAPI.com!"></img></td
 </tr>	
 
